Rollback category name to Misc
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -266,7 +266,7 @@
       ]
     },
     {
-      "title": "Other",
+      "title": "Misc",
       "items": [
         { "name": "Zod", "icon": "zod" },
         { "name": "Next.js", "icon": "next-js" },
