Configure bio from app.config.json and display fully
This commit configures the bio text from the  file and displays the entire bio without requiring a 'show more' button.  This simplifies the configuration and improves the user experience.

Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -9,6 +9,14 @@
     "twitter": "https://x.com/jesusgrat_dev",
     "kaggle": "https://www.kaggle.com/jesusgraterol"
   },
+  "bio": {
+    "title": "Hi! My name is Jesus Graterol",
+    "content": [
+      "I am a Web Developer with 10+ years of experience building scalable web applications and REST-based APIs.",
+      "My proficiency extends to data science, allowing me to train and serve complex machine learning models over the Internet.",
+      "As a problem solver with meticulous attention to detail, I'm adept at identifying and resolving intricate challenges quickly and efficiently."
+    ]
+  },
   "projects": [
     {
       "logo": "projects/balancer.png",
