Add TanStack Query to the Tech Stach
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -281,6 +281,7 @@
         { "name": "React Router", "icon": "react-router" },
         { "name": "Redux", "icon": "redux" },
         { "name": "Zustand", "icon": "zustand" },
+        { "name": "TanStack Query", "icon": "tanstack" },
         { "name": "React Hook Form", "icon": "react-hook-form" },
         { "name": "Drizzle", "icon": "drizzle", "hasLightVariant": true },
         { "name": "JWT", "icon": "jwt" },
