Include the latest experience's image file
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/app.config.json
+++ b/app.config.json
@@ -61,7 +61,7 @@
   ],
   "positions": [
     {
-      "logo": "experience/balancer.png",
+      "logo": "experience/sellit9.png",
       "dateRange": "Mar 2025 - Jul 2025",
       "positionName": "Senior Full-Stack Engineer",
       "companyName": "SELLIT9",
