--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
+    "prettier": "3.6.2",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
